| Summary: | ASTERISK-27688: res_pjsip: Crash on TCP PJSIP Transport Disconnect | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | patch pjsip |
| Date Opened: | 2018-02-17 04:34:06.000-0600 | Date Closed: | 2018-03-29 14:41:06 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | GIT | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Fedora 23 | Attachments: | ( 0) ASTERISK-27688.diff ( 1) core-asterisk-13233-1518850860-thread1.txt |
| Description: | Segfault in pjsip_transport_events:
{noformat} Thread 1 (Thread 0x7f94dfac5700 (LWP 151630)): #0 0x00007f95741424fa in __strcmp_sse2_unaligned () at /usr/lib64/libc.so.6 #1 0x00007f94e6e5ceeb in transport_monitor_cmp_fn (obj=0x7f94f85697c8, arg=<optimized out>, flags=<optimized out>) at res_pjsip/pjsip_transport_events.c:72 object_left = 0x7f94f85697c8 object_right = <optimized out> right_key = <optimized out> cmp = <optimized out> {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-02-17 04:34:08.623-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Richard Mudgett (rmudgett) 2018-02-17 13:45:55.144-0600 Looks like we may have to use pjsip_transport_add_ref() to actually hold a ref to the transport in res/res_pjsip/pjsip_transport_events.c. By: Ross Beer (rossbeer) 2018-03-06 03:01:54.968-0600 My attempt at creating a patch By: Friendly Automation (friendly-automation) 2018-03-29 14:41:07.506-0500 Change 8699 merged by Jenkins2: pjsip_transport_events.c: Fix crash using stale transport pointer. [https://gerrit.asterisk.org/8699|https://gerrit.asterisk.org/8699] By: Friendly Automation (friendly-automation) 2018-03-29 15:15:24.976-0500 Change 8698 merged by Kevin Harwell: pjsip_transport_events.c: Fix crash using stale transport pointer. [https://gerrit.asterisk.org/8698|https://gerrit.asterisk.org/8698] By: Friendly Automation (friendly-automation) 2018-03-29 15:15:34.389-0500 Change 8455 merged by Kevin Harwell: pjsip_transport_events.c: Fix crash using stale transport pointer. [https://gerrit.asterisk.org/8455|https://gerrit.asterisk.org/8455] | ||